--- a/index.html
+++ b/index.html
@@ -7,6 +7,63 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="logo">Header Logo</div>
+            <ul class="nav">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+    </header>    
+    <section class="section-1">
+        <div class="container">
+            <div class="left">
+            <H1 class="heading">This website is awesome</H1>
+            <div class="strapline">This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</div>
+            <button class="sign-up" href="#">Sign up</button>
+            </div>
+            <div class="img-placeholder">This is a placeholder for an image</div>
+        </div>
+    </section>
+    <section class="section-2">
+        <div class="container">
+            <h2 class="s2-header">Some random information</h2>
+            <div class="box-container">
+                <div class="box">
+                    <div class="img"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box">
+                    <div class="img"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="box">
+                    <div class="img"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+                <div class="box">
+                    <div class="img"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section-3">
+        <div class="container">
+        <div class="quote">This is an inspiring quote or testimonial from a customer. Maybe it's just taking up space or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quotee">Thor, God of Thunder</div>
+        </div>
+    </section>
+    <section class="section-4">
+        <div class="container">
+            <div class="call-to-action">
+                <h1 class="heading">Call to Action! Its Time!</h1>
+                <div class="body">Sign up to our product by clicking on that button right over there!</div>
+            </div>
+           <button class="sign-up">Sign Up</button>
+        </div>
+    </section>
 </body>
 </html>
